<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".ForgotPassActivity">

    <TextView
        android:id="@+id/ForgotPassView"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/LogEmailView"
        android:layout_width="match_parent"
        android:textSize="19sp"
        android:textColor="@color/gray"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/ForgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:textSize="17sp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/ForgetSecretView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secret"
        android:textColor="@color/gray"
        android:textSize="19sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/ForgotSecret"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/SigninButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:foregroundTint="@color/white"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/ic_lock"
        android:text="@string/sign_in" />

</LinearLayout>