<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/SignupView"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:gravity="center">

        <TextView
            android:id="@+id/AlreadyHaveView"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:text="@string/already_have"/>

        <TextView
            android:id="@+id/LogSignupView"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:text="@string/sign_in"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/LogEmailView"
                android:layout_width="match_parent"
                android:textSize="19sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/email"
                android:textColor="@color/gray"/>

            <EditText
                android:id="@+id/SignEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="17sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/LogPassView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/gray"
                android:textSize="19sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <EditText
                android:id="@+id/SignPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="17sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/SignupSecretView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/secret"
                android:textColor="@color/gray"
                android:textSize="19sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <EditText
                android:id="@+id/SignupSecret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="17sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:foregroundTint="@color/white"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/ic_lock"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/ContentView"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

</LinearLayout>