<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center">

    <TextView
        android:id="@+id/SigninView"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:gravity="center">

        <TextView
            android:id="@+id/DontHaveView"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:text="@string/dont_have"/>

        <TextView
            android:id="@+id/LogSignupView"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/dark_blue"
            android:text="@string/sign_up"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/LogEmailView"
                android:layout_width="match_parent"
                android:textSize="19sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/gray"
                android:text="@string/email" />

            <EditText
                android:id="@+id/LogEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_border"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:autofillHints=""
                android:textSize="17sp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/LogPassView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/gray"
                android:textSize="19sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="309dp" />

            <EditText
                android:id="@+id/LogPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_border"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:ems="10"
                android:textSize="17sp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="343dp" />

            <TextView
                android:id="@+id/LogForgetView"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:textColor="@color/dark_blue"
                android:textSize="14sp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                tools:layout_editor_absoluteX="253dp"
                tools:layout_editor_absoluteY="407dp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/SigninButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/ic_lock"
        android:foregroundTint="@color/white"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="471dp" />

</LinearLayout>